<resources>
    <string name="app_name">MorseCodeLight</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sos">SOS</string>
    <string name="start_mors_code">Start Mors Code</string>
    <string name="stop_encode">Stop encode</string>
    <string name="encode_activity">Encode Mors</string>
    <string name="stop">Stop encode</string>
    <string name="title_morsetab">Morse Tab</string>
    <string name="scrolView1">scrolView1</string>
    <string name="txt_char">Char</string>
    <string name="txt_morse_code">Morse Code</string>
    <string name="txt_mors_sig_interrupted">Mors signal interrupted</string>
    <string name="translate">Translate</string>
    <string name="translate_text_to_mors_code">Translate Text to Mors Code</string>
</resources>